tentando mexer no estilo

--- a/src/components/recursableComponents/styles.css
+++ b/src/components/recursableComponents/styles.css
@@ -1,11 +1,14 @@
 .App {
     font-family: sans-serif;
     text-align: center;
+
   }
   
   .react-autosuggest__container {
     position: relative;
     display: inline-block;
+    flex-grow: 1;
+    height: auto;
     margin-top: -10px;
   }
   
