--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+@media print {
+   #some { display:none; }
+
+
+
+
+  .myDivToPrint {
+      background-color: white;
+      height: 100%;
+      width: 100%;
+      /* position: fixed; */
+      top: 0;
+      left: 0;
+      margin: 0;
+      padding: 10px;
+      font-size: 14px;
+      line-height: 18px;
+      display: block;
+  }
+}
+/* #card {
+
+  min-height: 500 !important;
+  max-width: 200 !important;
+  max-height: 500 !important;
+  min-width: 200 !important;
+ }
+ .card {
+
+  min-height: 500 !important;
+  max-width: 200 !important;
+  max-height: 500 !important;
+  min-width: 200 !important;
+ } */
+/* .myDivToPrint {
+  height:0;
+  width: 0;
+} */
